# SeniorProject

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/blog/claybailey/seniorproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeCache.txt  CMakeLists.txt  Composer.cpp  Composer.h  Constants.h  Envelope.h  IRenderableAudio.h  KickDrum.h  Mixer.h  NoiseOsc.h  Oscillator.h  SinOsc.h  SquareOsc.h  SteelDrum.h  logging_macros.h  native-lib.cpp
app/src/main/java/blog/claybailey/seniorproject/: AppMidiDeviceService.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  twinkle.txt
app/src/main/res/xml/: app_midi_device_service.xml
app/src/test/java/blog/claybailey/seniorproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
